# api/src/api/middleware/index.ts
@@ -1,2 +1,3 @@
 export { deviceMiddleware, Device } from "./devices"
 export { errorHandler, consoleLogErrors, mongodbLogErrors } from "./errors"
+export { apiKeyAuth } from "./auth"
